--- a/style1.css
+++ b/style1.css
@@ -60,7 +60,7 @@ main {
 }
 
 footer {
-    background-color: #333;
+    background-color: #0a0a0a;
     color: #fff;
     text-align: center;
     padding: 1rem 0;
